2010-10-01  Kwang Yul Seo  <skyul@company100.net>

        Unreviewed.

        [BREWMP] Change Collector BLOCK_SIZE to 64KB
        https://bugs.webkit.org/show_bug.cgi?id=46436

        Lower BLOCK_SIZE to 64KB because Brew MP runs on low end devices.

        * runtime/Collector.h:

2010-10-01  Viatcheslav Ostapenko  <ostapenko.viatcheslav@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] Stack overflow on symbian platform.
        https://bugs.webkit.org/show_bug.cgi?id=40598
        
        Move big allocation in arrayProtoFuncToString from stack to heap.
        JSC::arrayProtoFuncToString function can be called recursivly and
        1K allocation on stack cahse stack overflow.
        Can be useful for other platforms with limited stack size.

        * runtime/ArrayPrototype.cpp:
        (JSC::arrayProtoFuncToString):

2010-09-30  Kwang Yul Seo  <skyul@company100.net>

        Reviewed by Kent Tamura.

        [BREWMP] Add a factory function which returns an instance wrapped in PlatformRefPtr.
        https://bugs.webkit.org/show_bug.cgi?id=46373

        A Brew MP instance has reference count 1 when it is created, so call adoptPlatformRef
        to wrap the instance in PlatformRefPtr.

        * wtf/brew/ShellBrew.h:
        (WTF::createRefPtrInstance):

2010-09-30  Kwang Yul Seo  <skyul@company100.net>

        Reviewed by Kent Tamura.

        [BREWMP] Port PlatformRefPtr
        https://bugs.webkit.org/show_bug.cgi?id=46370

        Implement refPlatformPtr and derefPlatformPtr to use PlatformRefPtr in Brew MP.

        * wtf/brew/RefPtrBrew.h: Added.
        (WTF::refPlatformPtr):
        (WTF::derefPlatformPtr):

2010-09-29  Sam Weinig  <sam@webkit.org>

        Reviewed by Darin Adler.

        Add additional checks to StringBuffer.
        <rdar://problem/7756381>

        * wtf/text/StringBuffer.h:
        (WTF::StringBuffer::StringBuffer):
        (WTF::StringBuffer::resize):

2010-09-30  Chris Marrin  <cmarrin@apple.com>
